@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.1.1.1 2003/01/23 18:11:05 fredb Exp $
+$NetBSD: distinfo,v 1.2 2005/01/18 00:08:17 hubertf Exp $
 
-SHA1 (musixtex-T109.tar.gz) = 646780ee9d87cdf4c7c59dc15a85e2fcf0546a95
-Size (musixtex-T109.tar.gz) = 651661 bytes
+SHA1 (musixtex-T112.tar.gz) = d0c3999d11253326ad10479dc7ef3cf8fc51d380
+Size (musixtex-T112.tar.gz) = 1024322 bytes
